# gStatLight

./: README.md  pyproject.toml
gslCLI/: cli_main.py
gslMASK/: mask_main.py  utils_mask.py
gslPY/cameras/: cameras.py
gslPY/data/datamanagers/: base_datamanager.py  full_images_datamanager.py
gslPY/data/dataparsers/: base_dataparser.py  colmap_dataparser.py  nerfstudio_dataparser.py
gslPY/data/datasets/: base_dataset.py
gslPY/data/utils/: dataloaders.py  nerfstudio_collate.py
gslPY/main/: gsl_main.py  utils_cull.py  utils_ground.py  utils_main.py
gslPY/models/: base_model.py  splatfacto.py
gslPY/pipelines/: base_pipeline.py
gslUTILS/: model_loader.py  utils.py
